endpoints Users qui permet de savoir les badges qu'il reçoit
